fixed x spacing

--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,7 @@ footer h6{
 
 #close{
     padding: 1em;
+    padding-left: 2em;
     position: fixed;
     display: none;
     z-index: 1;
